NOREF res3d18 torch first functional model

--- a/notebooks/test_try_c3d_model.ipynb
+++ b/notebooks/test_try_c3d_model.ipynb
@@ -131,7 +131,7 @@
     "\n",
     "        return x\n",
     "\n",
-    "modelo = ModeloC3D(num_frames=100, num_classes=2)\n"
+    "modelo = ModeloC3D(num_frames=100, num_classes=2)"
    ]
   },
   {
