--- a/notebooks/transfer_learning.ipynb
+++ b/notebooks/transfer_learning.ipynb
@@ -2,20 +2,36 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "repeat() takes at most 2 arguments (5 given)",
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "torch.Size([1, 120, 1, 178, 150])\n",
+      "torch.Size([1, 120, 1, 178, 150])\n",
+      "torch.Size([1, 120, 1, 178, 150])\n",
+      "torch.Size([1, 120, 1, 178, 150])\n",
+      "torch.Size([1, 120, 1, 178, 150])\n",
+      "torch.Size([1, 120, 1, 178, 150])\n",
+      "torch.Size([1, 120, 1, 178, 150])\n",
+      "torch.Size([1, 120, 1, 178, 150])\n",
+      "torch.Size([1, 120, 1, 178, 150])\n",
+      "torch.Size([1, 120, 1, 178, 150])\n",
+      "torch.Size([10, 1, 120, 1, 178, 150])\n"
+     ]
+    },
+    {
+     "ename": "RuntimeError",
+     "evalue": "Number of dimensions of repeat dims can not be smaller than number of dimensions of tensor",
      "output_type": "error",
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[9], line 68\u001b[0m\n\u001b[1;32m     63\u001b[0m     \u001b[39mreturn\u001b[39;00m {\n\u001b[1;32m     64\u001b[0m         \u001b[39m\"\u001b[39m\u001b[39mimages\u001b[39m\u001b[39m\"\u001b[39m: images_tensor, \n\u001b[1;32m     65\u001b[0m         \u001b[39m\"\u001b[39m\u001b[39mlabels\u001b[39m\u001b[39m\"\u001b[39m: labels_tensor\n\u001b[1;32m     66\u001b[0m     }\n\u001b[1;32m     67\u001b[0m \u001b[39m# Load the images and reshape if necessary\u001b[39;00m\n\u001b[0;32m---> 68\u001b[0m dict_images \u001b[39m=\u001b[39m load_nii_images(\u001b[39m'\u001b[39;49m\u001b[39m../aocr2024/1_Train,Valid_Image/\u001b[39;49m\u001b[39m'\u001b[39;49m, \u001b[39m\"\u001b[39;49m\u001b[39m../aocr2024/TrainValid_ground_truth.csv\u001b[39;49m\u001b[39m\"\u001b[39;49m)\n",
-      "Cell \u001b[0;32mIn[9], line 46\u001b[0m, in \u001b[0;36mload_nii_images\u001b[0;34m(folder, labels_file)\u001b[0m\n\u001b[1;32m     44\u001b[0m image_array \u001b[39m=\u001b[39m image_nifti\u001b[39m.\u001b[39mget_fdata()\n\u001b[1;32m     45\u001b[0m preprocessed_image \u001b[39m=\u001b[39m preprocess_nifti_image(image_array)\n\u001b[0;32m---> 46\u001b[0m preprocessed_image_reshaped \u001b[39m=\u001b[39m reshape_input(preprocessed_image)\n\u001b[1;32m     47\u001b[0m preprocessed_images\u001b[39m.\u001b[39mappend(\n\u001b[1;32m     48\u001b[0m     preprocessed_image_reshaped\n\u001b[1;32m     49\u001b[0m )\n\u001b[1;32m     51\u001b[0m labels\u001b[39m.\u001b[39mappend(\n\u001b[1;32m     52\u001b[0m     \u001b[39mint\u001b[39m(\n\u001b[1;32m     53\u001b[0m         labels_df\u001b[39m.\u001b[39mloc[\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m     59\u001b[0m     )\n\u001b[1;32m     60\u001b[0m )\n",
-      "Cell \u001b[0;32mIn[9], line 29\u001b[0m, in \u001b[0;36mreshape_input\u001b[0;34m(volume)\u001b[0m\n\u001b[1;32m     27\u001b[0m reshaped \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39mexpand_dims(reshaped, \u001b[39m-\u001b[39m\u001b[39m1\u001b[39m) \n\u001b[1;32m     28\u001b[0m \u001b[39m# Let's repeat the input to adapt it to the 3 required channels\u001b[39;00m\n\u001b[0;32m---> 29\u001b[0m reshaped \u001b[39m=\u001b[39m reshaped\u001b[39m.\u001b[39;49mrepeat(\u001b[39m1\u001b[39;49m, \u001b[39m1\u001b[39;49m, \u001b[39m1\u001b[39;49m, \u001b[39m1\u001b[39;49m, \u001b[39m3\u001b[39;49m) \n\u001b[1;32m     30\u001b[0m \u001b[39mreturn\u001b[39;00m reshaped\n",
-      "\u001b[0;31mTypeError\u001b[0m: repeat() takes at most 2 arguments (5 given)"
+      "\u001b[0;31mRuntimeError\u001b[0m                              Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[7], line 74\u001b[0m\n\u001b[1;32m     69\u001b[0m     \u001b[39mreturn\u001b[39;00m {\n\u001b[1;32m     70\u001b[0m         \u001b[39m\"\u001b[39m\u001b[39mimages\u001b[39m\u001b[39m\"\u001b[39m: images_tensor, \n\u001b[1;32m     71\u001b[0m         \u001b[39m\"\u001b[39m\u001b[39mlabels\u001b[39m\u001b[39m\"\u001b[39m: labels_tensor\n\u001b[1;32m     72\u001b[0m     }\n\u001b[1;32m     73\u001b[0m \u001b[39m# Load the images and reshape if necessary\u001b[39;00m\n\u001b[0;32m---> 74\u001b[0m dict_images \u001b[39m=\u001b[39m load_nii_images(\u001b[39m'\u001b[39;49m\u001b[39m../aocr2024/preprocessed_images/\u001b[39;49m\u001b[39m'\u001b[39;49m, \u001b[39m\"\u001b[39;49m\u001b[39m../aocr2024/TrainValid_ground_truth.csv\u001b[39;49m\u001b[39m\"\u001b[39;49m)\n",
+      "Cell \u001b[0;32mIn[7], line 65\u001b[0m, in \u001b[0;36mload_nii_images\u001b[0;34m(folder, labels_file)\u001b[0m\n\u001b[1;32m     63\u001b[0m \u001b[39mprint\u001b[39m(images_tensor\u001b[39m.\u001b[39mshape)\n\u001b[1;32m     64\u001b[0m \u001b[39m# Let's repeat the input to adapt it to the 3 required channels\u001b[39;00m\n\u001b[0;32m---> 65\u001b[0m images_tensor \u001b[39m=\u001b[39m images_tensor\u001b[39m.\u001b[39;49mrepeat(\u001b[39m1\u001b[39;49m, \u001b[39m1\u001b[39;49m, \u001b[39m1\u001b[39;49m, \u001b[39m1\u001b[39;49m, \u001b[39m3\u001b[39;49m) \n\u001b[1;32m     66\u001b[0m \u001b[39m# Permutate the input to match the dimensions in the model\u001b[39;00m\n\u001b[1;32m     67\u001b[0m images_tensor \u001b[39m=\u001b[39m images_tensor\u001b[39m.\u001b[39mpermute(\u001b[39m0\u001b[39m, \u001b[39m4\u001b[39m, \u001b[39m1\u001b[39m, \u001b[39m2\u001b[39m, \u001b[39m3\u001b[39m)\n",
+      "\u001b[0;31mRuntimeError\u001b[0m: Number of dimensions of repeat dims can not be smaller than number of dimensions of tensor"
      ]
     }
    ],
