NOREF: add notebooks extra for res3d18

--- a/notebooks/c3r18_models.ipynb
+++ b/notebooks/c3r18_models.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,21 +38,22 @@
     "    def __init__(self, image_dir, labels_file, validation_file, split = \"Train\"):\n",
     "        self.image_dir = image_dir\n",
     "        self.__type_of_data = split\n",
-    "        self.__df_validation = pd.read_csv(\n",
-    "            validation_file,\n",
-    "        )\n",
-    "        self.df_labels = pd.read_csv(\n",
-    "            labels_file\n",
-    "        )\n",
     "        self.image_filenames = set([filename.split(\".\")[0] for filename in os.listdir(image_dir)])\n",
-    "        self.image_filenames = self.image_filenames.intersection(\n",
-    "            set(\n",
-    "                self.__df_validation.loc[\n",
-    "                    self.__df_validation.group == self.__type_of_data,\n",
-    "                    \"id\"\n",
-    "                ]\n",
+    "        if self.__type_of_data != \"Test\":\n",
+    "            self.__df_validation = pd.read_csv(\n",
+    "                validation_file,\n",
     "            )\n",
-    "        )\n",
+    "            self.df_labels = pd.read_csv(\n",
+    "                labels_file\n",
+    "            )\n",
+    "            self.image_filenames = self.image_filenames.intersection(\n",
+    "                set(\n",
+    "                    self.__df_validation.loc[\n",
+    "                        self.__df_validation.group == self.__type_of_data,\n",
+    "                        \"id\"\n",
+    "                    ]\n",
+    "                )\n",
+    "            )\n",
     "        self.image_filenames = [f\"{filename}.nii.gz\" for filename in self.image_filenames]        \n",
     "\n",
     "    def __len__(self):\n",
@@ -66,7 +67,10 @@
     "        ).float()\n",
     "        # Get label\n",
     "        id = img_name.split(\"/\")[-1].split(\".\")[0]\n",
-    "        label = int(\n",
+    "        if self.__type_of_data == \"Test\":\n",
+    "            label = id\n",
+    "        else:\n",
+    "            label = int(\n",
     "                    self.df_labels.loc[\n",
     "                        self.df_labels.id == id,\n",
     "                        \"label\"\n",
@@ -103,16 +107,88 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loaded the model from ../model_store/execution_20.pth\n",
+      "Continue training after 20 for epochs 10\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/10: 100%|██████████| 50/50 [1:24:54<00:00, 101.90s/it, loss=0.109, accuracy=0.962] \n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Validation accuracy: 81.00%\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Epoch 2/10: 100%|██████████| 50/50 [1:15:33<00:00, 90.68s/it, loss=0.0973, accuracy=0.964]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Validation accuracy: 80.00%\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Epoch 3/10: 100%|██████████| 50/50 [1:15:06<00:00, 90.12s/it, loss=0.0434, accuracy=0.982]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Validation accuracy: 73.50%\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Epoch 4/10: 100%|██████████| 50/50 [1:07:52<00:00, 81.45s/it, loss=0.0897, accuracy=0.965]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Validation accuracy: 78.00%\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Epoch 5/10: 100%|██████████| 50/50 [1:07:50<00:00, 81.41s/it, loss=0.131, accuracy=0.956]\n"
+     ]
+    }
+   ],
    "source": [
     "# Model\n",
     "model = ModifiedR3D18()\n",
     "model.train()\n",
     "# Load model if exists\n",
     "try:\n",
-    "    file_name = \"../model_store/execution_10.pth\"\n",
+    "    file_name = \"../model_store/execution_20.pth\"\n",
     "    model.load_state_dict(torch.load(file_name))\n",
     "    original_epochs = file_name.split(\".\")[2].split(\"_\")[-1]\n",
     "    print(f\"Loaded the model from {file_name}\")\n",
@@ -160,24 +236,106 @@
     "            valid_correct_predictions += (predicted == labels).sum().item()\n",
     "            valid_total_predictions += labels.size(0)\n",
     "        average_accuracy = valid_correct_predictions / valid_total_predictions\n",
-    "        print(f\"Validation accuracy: {average_accuracy * 100:.2f}%\")"
+    "        print(f\"Validation accuracy: {average_accuracy * 100:.2f}% Validation items: {valid_total_predictions}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "torch.save(model.state_dict(), f'../model_store/execution_{num_epochs}.pth')"
+    "torch.save(model.state_dict(), f'../model_store/execution_{int(num_epochs) + int(original_epochs)}.pth')"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Testing"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loaded the model from ../model_store/execution_20.pth\n"
+     ]
+    }
+   ],
+   "source": [
+    "model = ModifiedR3D18()\n",
+    "model.train()\n",
+    "# Load model if exists\n",
+    "try:\n",
+    "    file_name = \"../model_store/execution_20.pth\"\n",
+    "    model.load_state_dict(torch.load(file_name))\n",
+    "    original_epochs = file_name.split(\".\")[2].split(\"_\")[-1]\n",
+    "    print(f\"Loaded the model from {file_name}\")\n",
+    "except Exception as e:\n",
+    "    print(f\"First train a model you lazy!\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Test dataset\n",
+    "test_dataset = LazyImageDataset(\n",
+    "    image_dir = \"../aocr2024/preprocessed_images_test/\",\n",
+    "    labels_file = \"../aocr2024/TrainValid_ground_truth.csv\",\n",
+    "    validation_file = \"../aocr2024/TrainValid_split.csv\",\n",
+    "    split = \"Test\",\n",
+    ")\n",
+    "# Test loader\n",
+    "test_loader = DataLoader(\n",
+    "    test_dataset,\n",
+    "    batch_size = batch_size,\n",
+    "    shuffle = False,\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "classifications = []\n",
+    "ids = []\n",
+    "for images, labels in test_loader:\n",
+    "    outputs = model(images)\n",
+    "    probabilities = torch.sigmoid(outputs)\n",
+    "    predicted = list((probabilities > 0.5).float())\n",
+    "    classifications += predicted\n",
+    "    ids += list(labels)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# submission csv\n",
+    "submission = pd.DataFrame(\n",
+    "    zip(ids, classifications),\n",
+    "    columns = [\n",
+    "        \"id\",\n",
+    "        \"label\"\n",
+    "    ]\n",
+    ")\n",
+    "submission[\"label\"] = submission.label.astype(int)\n",
+    "submission.to_csv(\"../aocr2024/submission.csv\", index = False)"
+   ]
   }
  ],
  "metadata": {
