--- a/notebooks/load_masks.ipynb
+++ b/notebooks/load_masks.ipynb
@@ -2,19 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Thresholds - min tensor([ 98, 194,  15]), max tensor([275, 343,  54])\n",
-      "Preprocessed and stored 999 images\n",
-      "Percentage removed: 0.10%\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import os\n",
     "import nibabel as nib\n",
@@ -96,7 +86,7 @@
     "    return True\n",
     "\n",
     "# Load the images\n",
-    "def preprocess_nii_images(folder:str , output_folder: str = \"../aocr2024/preprocessed_images/\", bounds: list = None):\n",
+    "def preprocess_nii_images(folder:str , output_folder: str = \"../aocr2024/preprocessed_images/\", bounds: list = None, test: bool = False):\n",
     "    min_shape_image = [\n",
     "        int(bounds[1][0] - bounds[0][0]) + 1, \n",
     "        int(bounds[1][1] - bounds[0][1]) + 1, \n",
@@ -146,30 +136,34 @@
     "    return reductions_stored\n",
     "    \n",
     "# Get the global bounds\n",
-    "global_min, global_max = calculate_bounds(\"../aocr2024/2_Train,Valid_Mask/\")\n",
-    "# Crop the images with the new bounds\n",
-    "print(f\"Thresholds - min {global_min}, max {global_max}\")\n",
-    "ratios = preprocess_nii_images(\"../aocr2024/1_Train,Valid_Image/\", bounds = [global_min,  global_max])"
+    "global_min, global_max = calculate_bounds(\"../aocr2024/2_Train,Valid_Mask/\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'seaborn'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[10], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mmatplotlib\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mpyplot\u001b[39;00m \u001b[39mas\u001b[39;00m \u001b[39mplt\u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mseaborn\u001b[39;00m \u001b[39mas\u001b[39;00m \u001b[39msns\u001b[39;00m\n\u001b[1;32m      4\u001b[0m sns\u001b[39m.\u001b[39mkdeplot(ratios)\n",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'seaborn'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Thresholds - min tensor([ 98, 194,  15]), max tensor([275, 343,  54])\n",
+      "Preprocessed and stored 201 images\n",
+      "Percentage removed: 0.00%\n"
      ]
     }
    ],
-   "source": []
+   "source": [
+    "# Test and train or only test\n",
+    "only_test = True\n",
+    "# Crop the images with the new bounds\n",
+    "print(f\"Thresholds - min {global_min}, max {global_max}\")\n",
+    "if only_test:\n",
+    "    ratios = preprocess_nii_images(\"../aocr2024/3_Test1_Image/\", bounds = [global_min,  global_max], output_folder = \"../aocr2024/preprocessed_images_test/\")\n",
+    "else:\n",
+    "    ratios = preprocess_nii_images(\"../aocr2024/1_Train,Valid_Image/\", bounds = [global_min,  global_max])"
+   ]
   },
   {
    "cell_type": "code",
