NOREF: add notebooks extra for res3d18

--- a/notebooks/c3r18_models.ipynb
+++ b/notebooks/c3r18_models.ipynb
@@ -180,6 +180,83 @@
      "text": [
       "Epoch 5/10: 100%|██████████| 50/50 [1:07:50<00:00, 81.41s/it, loss=0.131, accuracy=0.956]\n"
      ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Validation accuracy: 80.00%\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Epoch 6/10: 100%|██████████| 50/50 [1:09:05<00:00, 82.92s/it, loss=0.066, accuracy=0.979] \n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Validation accuracy: 83.00%\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Epoch 7/10: 100%|██████████| 50/50 [1:07:38<00:00, 81.18s/it, loss=0.016, accuracy=0.997] \n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Validation accuracy: 84.00%\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Epoch 8/10: 100%|██████████| 50/50 [1:07:17<00:00, 80.75s/it, loss=0.0162, accuracy=0.995]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Validation accuracy: 79.50%\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Epoch 9/10: 100%|██████████| 50/50 [1:07:14<00:00, 80.70s/it, loss=0.00836, accuracy=0.999]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Validation accuracy: 81.00%\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Epoch 10/10: 100%|██████████| 50/50 [1:07:19<00:00, 80.79s/it, loss=0.0107, accuracy=0.996]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Validation accuracy: 82.50%\n"
+     ]
     }
    ],
    "source": [
@@ -241,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
