--- a/notebooks/load_masks.ipynb
+++ b/notebooks/load_masks.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -141,28 +141,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Thresholds - min tensor([ 98, 194,  15]), max tensor([275, 343,  54])\n",
-      "Preprocessed and stored 201 images\n",
-      "Percentage removed: 0.00%\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Test and train or only test\n",
-    "only_test = True\n",
+    "only_test = False\n",
     "# Crop the images with the new bounds\n",
     "print(f\"Thresholds - min {global_min}, max {global_max}\")\n",
     "if only_test:\n",
     "    ratios = preprocess_nii_images(\"../aocr2024/3_Test1_Image/\", bounds = [global_min,  global_max], output_folder = \"../aocr2024/preprocessed_images_test/\")\n",
     "else:\n",
-    "    ratios = preprocess_nii_images(\"../aocr2024/1_Train,Valid_Image/\", bounds = [global_min,  global_max])"
+    "    ratios = preprocess_nii_images(\"../aocr2024/1_Train,Valid_Image/\", bounds = [global_min,  global_max], output_folder = \"../aocr2024/preprocessed_images/\")\n",
+    "    ratios = preprocess_nii_images(\"../aocr2024/3_Test1_Image/\", bounds = [global_min,  global_max], output_folder = \"../aocr2024/preprocessed_images_test/\")"
    ]
   },
   {
@@ -189,7 +180,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.11.0"
   },
   "orig_nbformat": 4
  },
