--- a/notebooks/c3r18_models.ipynb
+++ b/notebooks/c3r18_models.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -107,165 +107,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Loaded the model from ../model_store/execution_20.pth\n",
-      "Continue training after 20 for epochs 10\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Epoch 1/10: 100%|██████████| 50/50 [1:24:54<00:00, 101.90s/it, loss=0.109, accuracy=0.962] \n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Validation accuracy: 81.00%\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Epoch 2/10: 100%|██████████| 50/50 [1:15:33<00:00, 90.68s/it, loss=0.0973, accuracy=0.964]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Validation accuracy: 80.00%\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Epoch 3/10: 100%|██████████| 50/50 [1:15:06<00:00, 90.12s/it, loss=0.0434, accuracy=0.982]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Validation accuracy: 73.50%\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Epoch 4/10: 100%|██████████| 50/50 [1:07:52<00:00, 81.45s/it, loss=0.0897, accuracy=0.965]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Validation accuracy: 78.00%\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Epoch 5/10: 100%|██████████| 50/50 [1:07:50<00:00, 81.41s/it, loss=0.131, accuracy=0.956]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Validation accuracy: 80.00%\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Epoch 6/10: 100%|██████████| 50/50 [1:09:05<00:00, 82.92s/it, loss=0.066, accuracy=0.979] \n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Validation accuracy: 83.00%\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Epoch 7/10: 100%|██████████| 50/50 [1:07:38<00:00, 81.18s/it, loss=0.016, accuracy=0.997] \n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Validation accuracy: 84.00%\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Epoch 8/10: 100%|██████████| 50/50 [1:07:17<00:00, 80.75s/it, loss=0.0162, accuracy=0.995]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Validation accuracy: 79.50%\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Epoch 9/10: 100%|██████████| 50/50 [1:07:14<00:00, 80.70s/it, loss=0.00836, accuracy=0.999]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Validation accuracy: 81.00%\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Epoch 10/10: 100%|██████████| 50/50 [1:07:19<00:00, 80.79s/it, loss=0.0107, accuracy=0.996]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Validation accuracy: 82.50%\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Model\n",
     "model = ModifiedR3D18()\n",
     "model.train()\n",
     "# Load model if exists\n",
     "try:\n",
-    "    file_name = \"../model_store/execution_20.pth\"\n",
+    "    file_name = \"../tmp/tmp_execution_8.pth\"\n",
     "    model.load_state_dict(torch.load(file_name))\n",
     "    original_epochs = file_name.split(\".\")[2].split(\"_\")[-1]\n",
     "    print(f\"Loaded the model from {file_name}\")\n",
@@ -279,7 +130,7 @@
     ")\n",
     "\n",
     "# Number of epochs\n",
-    "num_epochs = 10\n",
+    "num_epochs = 30\n",
     "print(f\"Continue training after {original_epochs} for epochs {num_epochs}\")\n",
     "for epoch in range(num_epochs):\n",
     "    total_loss = 0\n",
@@ -313,12 +164,14 @@
     "            valid_correct_predictions += (predicted == labels).sum().item()\n",
     "            valid_total_predictions += labels.size(0)\n",
     "        average_accuracy = valid_correct_predictions / valid_total_predictions\n",
-    "        print(f\"Validation accuracy: {average_accuracy * 100:.2f}% Validation items: {valid_total_predictions}\")"
+    "        print(f\"Validation accuracy: {average_accuracy * 100:.2f}% Validation items: {valid_total_predictions}\")\n",
+    "    # Store the current model just in case of failure\n",
+    "    torch.save(model.state_dict(), f'../tmp/tmp_execution_{int(epoch) + int(original_epochs) + 1}.pth')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -335,17 +188,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Loaded the model from ../model_store/execution_20.pth\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "model = ModifiedR3D18()\n",
     "model.train()\n",
@@ -361,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -382,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -398,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -431,7 +276,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.11.0"
   },
   "orig_nbformat": 4
  },
