NOREF: src code for running the code, first test with 0.72 acc on val with 14 epochs

--- a/notebooks/load_masks.ipynb
+++ b/notebooks/load_masks.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -141,9 +141,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Thresholds - min tensor([ 98, 194,  15]), max tensor([275, 343,  54])\n",
+      "Preprocessed and stored 999 images\n",
+      "Percentage removed: 0.10%\n",
+      "Preprocessed and stored 199 images\n",
+      "Percentage removed: 0.00%\n"
+     ]
+    }
+   ],
    "source": [
     "# Test and train or only test\n",
     "only_test = False\n",
@@ -152,8 +164,8 @@
     "if only_test:\n",
     "    ratios = preprocess_nii_images(\"../aocr2024/3_Test1_Image/\", bounds = [global_min,  global_max], output_folder = \"../aocr2024/preprocessed_images_test/\")\n",
     "else:\n",
-    "    ratios = preprocess_nii_images(\"../aocr2024/1_Train,Valid_Image/\", bounds = [global_min,  global_max], output_folder = \"../aocr2024/preprocessed_images/\")\n",
-    "    ratios = preprocess_nii_images(\"../aocr2024/3_Test1_Image/\", bounds = [global_min,  global_max], output_folder = \"../aocr2024/preprocessed_images_test/\")"
+    "    ratios_training = preprocess_nii_images(\"../aocr2024/1_Train,Valid_Image/\", bounds = [global_min,  global_max], output_folder = \"../aocr2024/preprocessed_images/\")\n",
+    "    ratios_test = preprocess_nii_images(\"../aocr2024/3_Test1_Image/\", bounds = [global_min,  global_max], output_folder = \"../aocr2024/preprocessed_images_test/\")"
    ]
   },
   {
